fixed references to index.html

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
             <input type="checkbox" id="menu-toggle">
             <nav class="navbar close">
                 <ul>
-                    <li><a href = "home.html">Home</a></li>
+                    <li><a href = "index.html">Home</a></li>
                         <li><a href = "one.html">Products</a></li>
                         <li><a href = "two.html">About Us</a></li>
                         <li><a href = "#footer">Contact Us</a></li>
@@ -35,7 +35,7 @@
             <h4>Opps! Page not found</h4>
             <p>Sorry, The page you are looking for does not exist. If you think something is broken, Please contact us</p>
             <div class="error-btn">
-                <a href="home.html">Return Home</a>
+                <a href="index.html">Return Home</a>
                 <a href="mailto:xyz@gmail.com">Report Issue</a>
             </div>
         </div>
@@ -46,7 +46,7 @@
         <div class="footLeft">
             <h3>Prime<span>Picks</span></h3>
             <p class="footer-links">
-                <a href="home.html">Home</a> | <a href="one.html">Products</a> | <a href="two.html">About Us</a> | <a href="mailto:xyz@gmail.com">Contact</a> 
+                <a href="index.html">Home</a> | <a href="one.html">Products</a> | <a href="two.html">About Us</a> | <a href="mailto:xyz@gmail.com">Contact</a> 
             </p>
             <p class="footer-company-name">Copyright © 2024 <strong>PrimePicks</strong> All rights reserved</p>
         </div>
