--- a/two.html
+++ b/two.html
@@ -19,7 +19,7 @@
             <input type="checkbox" id="menu-toggle">
             <nav class="navbar close">
                 <ul>
-                    <li><a href = "home.html">Home</a></li>
+                    <li><a href = "index.html">Home</a></li>
                         <li><a href = "one.html">Products</a></li>
                         <li><a href = "two.html">About Us</a></li>
                         <li><a href = "#footer">Contact Us</a></li>
@@ -146,7 +146,7 @@
         <div class="footLeft">
             <h3>Prime<span>Picks</span></h3>
             <p class="footer-links">
-                <a href="home.html">Home</a> | <a href="one.html">Products</a> | <a href="two.html">About Us</a> | <a href="mailto:xyz@gmail.com">Contact</a> 
+                <a href="index.html">Home</a> | <a href="one.html">Products</a> | <a href="two.html">About Us</a> | <a href="mailto:xyz@gmail.com">Contact</a> 
             </p>
             <p class="footer-company-name">Copyright © 2024 <strong>PrimePicks</strong> All rights reserved</p>
         </div>
