--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="checkbox" id="menu-toggle">
                 <nav class="navbar close">
                     <ul>
-                        <li><a href = "home.html">Home</a></li>
+                        <li><a href = "index.html">Home</a></li>
                         <li><a href = "one.html">Products</a></li>
                         <li><a href = "two.html">About Us</a></li>
                         <li><a href = "#footer">Contact Us</a></li>
