--- a/one.html
+++ b/one.html
@@ -5,7 +5,7 @@
     <title>PrimePicks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href= "imgs/bag-shopping-solid.svg" type="image/x-icon">
-    <link rel="stylesheet" href="webstyle.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
