various fixes for smaller devices

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="logo">
                     <img src="imgs/logo.png" alt="PrimePicks LOGO">
                 </div>
-                <input type="checkbox" id="menu-toggle">
+                <input type="checkbox" id="menu-toggle" checked>
                 <nav class="navbar close">
                     <ul>
                         <li><a href = "index.html">Home</a></li>
